style/app.less
@import (inline) "../node_modules/normalize.css/normalize.css";
@import (inline) "../node_modules/milligram/dist/milligram.min.css";


@errorColor: red;
@successColor: green;

h1,h2,h3,h4,h5,h6,strong{
    color: #333;
}

body {
    font-family: Roboto, sans-serif;
    background: #e2e1e0;
}
.button:focus{
    background-color: #9b4dca;
    border-color: white;
}
.button:active{
    background-color: #333;
}

.profilePic{
    height: 64px;
    width: 64px;
    border-radius: 100%;
    margin: 16px auto;
    display: block;
}

.container{
    max-width: 60rem;
    background: white;
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

@media (max-width: 40rem){
    .container{
        width: 90%;
    }
}


.has-error {
    label{

    }
    .result{
      margin-bottom: 1.5em;
      span.entered {
        color: @errorColor;
        border-color: @errorColor;
        font-size: 1em;
        text-decoration: line-through;
      }
      span.expected {
        color: black;
        font-weight: bold;
        font-size: 1.5em;
        padding-right: 1.5em;
      }
    }

}

.has-success {
  label{
  }
  .result{
    margin-bottom: 1.5em;
    span.entered {
      color: @successColor;
      font-weight: bold;
      font-size: 1.5em;
    }
  }
}

